added coming soon webpage

--- a/src/app/coming-soon/coming-soon.component.html
+++ b/src/app/coming-soon/coming-soon.component.html
@@ -1,5 +1,6 @@
-<div class="container text-center my-5">
-    <img src="assets/ak-dev-studio-logo.png" alt="AK Dev Studio Logo" class="mb-4" style="max-width: 300px;">
-    <h1 class="display-4">Coming Soon</h1>
-    <p class="lead">We're working on something exciting. Stay tuned!</p>
-  </div>
+<div class="container d-flex justify-content-center align-items-center flex-column my-5">
+  <h1 class="text-center">Coming Soon</h1>
+  <p class="lead text-center">We're working on something exciting. Stay tuned!</p>
+
+  <img src="../../assets/brand_logo.png" alt="AK Dev Studio Logo" style="max-width: 100%; height: auto;">
+</div>
