--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
-@import 'styles/variables';
+$primary-color: #000000; // Black from AK logo
+$secondary-color: #0000FF; // Blue from <dev> text
+$accent-color: #000080; // Navy blue from "Smart Websites" text
+
+// Import Bootstrap
+@import "bootstrap/scss/bootstrap";
